# achack

./: CMakeLists.txt
include/: common.h  constants.h  gamememory.h  pointer.h
src/: gamememory.cpp  main.cpp  pointer.cpp  thread_esp_data.cpp  thread_memory_read.cpp  threadmemoryread.cpp
